--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uzhedoma",
+  "name": "single-price-grid-component",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
